po: update po/nl_NL/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/drupal-civicrm.po
+++ b/po/nl_NL/drupal-civicrm.po
@@ -6,14 +6,15 @@
 # HanV <han.velthuis@home.nl>, 2013-2015
 # HanV <han.velthuis@home.nl>, 2011-2012
 # HanV <han.velthuis@home.nl>, 2011
+# Kevin Levie <kevin@levity.nl>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2015-04-01 15:16+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
-"Language-Team: Dutch (http://www.transifex.com/projects/p/civicrm/language/nl/)\n"
+"PO-Revision-Date: 2016-01-27 03:13+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -228,7 +229,7 @@ msgstr "De tekst die getoond zal worden in het veld met de link."
 #: drupal/modules/views/civicrm/civicrm_handler_filter_location.inc
 #: drupal/modules/views/civicrm/civicrm_handler_filter_location_type.inc
 msgid "Location type"
-msgstr "Locatie type"
+msgstr "Locatietype"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_event.inc
 #: drupal/modules/views/civicrm/civicrm_handler_field_event_link.inc
@@ -627,7 +628,7 @@ msgstr "Gebruik het formulier 'Associatieregel toevoegen' om er een toe te voege
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 msgid "Choose a CiviCRM Group and a Drupal Role below."
-msgstr "Kies hieronder een CiviCRM-groep en een Drupal Rol."
+msgstr "Kies hieronder een CiviCRM-groep en een Drupal-rol."
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 msgid "CiviCRM Group"
@@ -639,7 +640,7 @@ msgstr "-- Selecteer --"
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 msgid "Drupal Role"
-msgstr "Drupal rol"
+msgstr "Drupal-rol"
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 msgid ""
@@ -652,7 +653,7 @@ msgstr "Er is een fout opgetreden tijden het ophalen van de associatie regel voo
 msgid ""
 "You must select both a CiviCRM Group and a Drupal Role from the "
 "\"Association Rule\" section."
-msgstr "U moet een CiviCRM-groep en een Drupal Rol selecteren in de \"Associatie Regel\" sectie."
+msgstr "U moet een CiviCRM-groep en een Drupal-rol selecteren in het blok 'Associatieregel'."
 
 #: drupal/modules/civicrm_group_roles/civicrm_group_roles.module
 msgid "Please select CiviCRM Group and Drupal Role."
@@ -715,7 +716,7 @@ msgstr "Drupal gebruiker"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Sort Name"
-msgstr "Sorteer naam"
+msgstr "Sorteernaam"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The Contact Name for sorting purposes, Last Name then First"
@@ -1365,7 +1366,7 @@ msgstr "Is een test"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Is the contribution a test entry?"
-msgstr "Is het een test bijdrage?"
+msgstr "Is het een test-bijdrage?"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Opted to Pay Contribution Later, and is still pending payment."
@@ -1909,7 +1910,7 @@ msgstr "Beschrijving van het kenmerk"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Mailings"
-msgstr "CiviCRM Mailings"
+msgstr "CiviCRM-mailings"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "View displays CiviCRM Mailing Results."
@@ -2065,7 +2066,7 @@ msgstr "Datum dat de gebruiker de e-mail heeft doorgestuurd"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Mailing Click Throughs"
-msgstr "Klik door mailingen in CiviCRM"
+msgstr "Doorkliks vanuit mailings"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Date of click through"
@@ -2077,7 +2078,7 @@ msgstr "Datum dat de gebruiker een link klikte in de e-mail"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Mailing click through ID"
-msgstr "Klik door mailingen via het ID"
+msgstr "Doorklik-ID"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The numeric ID click through record"
@@ -2085,7 +2086,7 @@ msgstr "Het numerieke ID bestand"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Mailing Click Throughs URL"
-msgstr "Klik door CiviCRM mailingen via URL"
+msgstr "Doorklik-URL"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "URL"
@@ -2341,7 +2342,7 @@ msgstr "Link naar Deelnemerslijst"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_event.inc
 msgid "Link to Edit Event Participants"
-msgstr "Link om evenementdeelnemers te wijzigen"
+msgstr "Link om deelnemers aan het evenement te wijzigen"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_event.inc
 msgid "Link to Delete Event"
@@ -2556,7 +2557,7 @@ msgstr "Handmatige synchronisatie"
 
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Synchronize CiviMember Membership Types to Drupal Roles now"
-msgstr "Synchroniseer nu de CiviMember Lidmaatschapstypes en de Drupal Rollen"
+msgstr "Synchroniseer nu CiviMember-lidmaatschapstypes met Drupal-rollen"
 
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid ""
@@ -2569,7 +2570,7 @@ msgstr "CiviMember Lidmaatschapstypes en Drupal Rollen zijn gesynchroniseerd met
 msgid ""
 "There was an error. CiviMember Memberships and Drupal Roles could not be "
 "synchronized."
-msgstr "Er is een fout opgetreden. De CiviMember Lidmaatschappen en de Drupal Rollen zijn niet gesynchroniseerd."
+msgstr "Er is een fout opgetreden. De CiviMember-lidmaatschappen en Drupal-rollen zijn niet gesynchroniseerd."
 
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Settings"
@@ -2624,7 +2625,7 @@ msgstr "Kies een CiviMember Lidmaatschapstype"
 
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Select a Drupal Role"
-msgstr "Kies een Drupal rol"
+msgstr "Kies een Drupal-rol"
 
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "CiviMember Status Rules"
