--- a/po/nl_NL/install.po
+++ b/po/nl_NL/install.po
@@ -4,14 +4,15 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # HanV <han.velthuis@home.nl>, 2014-2015
+# Kevin Levie <kevin@levity.nl>, 2016
 # Maurice Snellen <maurice@snellen.xs4all.nl>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:58-0400\n"
-"PO-Revision-Date: 2015-06-09 18:45+0000\n"
-"Last-Translator: Maurice Snellen <maurice@snellen.xs4all.nl>\n"
-"Language-Team: Dutch (http://www.transifex.com/projects/p/civicrm/language/nl/)\n"
+"POT-Creation-Date: 2015-12-09 21:24-0500\n"
+"PO-Revision-Date: 2016-01-26 14:22+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -131,7 +132,7 @@ msgstr "Voldoet de MySQL thread_stack aan het minimum (%1k)"
 
 #: install/index.php
 msgid "Can I access/create the database?"
-msgstr "Mag ik de database benaderen/maken?"
+msgstr "Kan ik de database benaderen of aanmaken?"
 
 #: install/index.php
 msgid "I can't create new databases and the database '%1' doesn't exist."
@@ -186,7 +187,7 @@ msgstr "PHP-versie %1"
 
 #: install/index.php
 msgid "File permissions"
-msgstr "Bestandsmachtigingen"
+msgstr "Bestandsrechten"
 
 #: install/index.php
 msgid "Does the webserver know where files are stored?"
@@ -222,7 +223,7 @@ msgstr "Ik kan niet bepalen welke webserver u draait"
 
 #: install/index.php
 msgid "Webserver config"
-msgstr "Webserverconfiguratie"
+msgstr "Webserver-configuratie"
 
 #: install/index.php
 msgid "Recognised webserver"
@@ -314,7 +315,7 @@ msgstr "Kon niet bepalen of MySQL InnoDB ondersteunt. Neem aan van niet."
 
 #: install/index.php
 msgid "MySQL server does have InnoDB support"
-msgstr "MySQL server ondersteunt InnoDB"
+msgstr "MySQL-server ondersteunt InnoDB"
 
 #: install/index.php
 msgid "Could not determine if MySQL has InnoDB support. Assuming no"
@@ -481,7 +482,7 @@ msgstr "Vereisten controleren en CiviCRM installeren"
 
 #: install/template.html
 msgid "Installing CiviCRM..."
-msgstr "Installatie CiviCRM loopt..."
+msgstr "Bezig met installeren van CiviCRM..."
 
 #: install/template.html
 msgid "(this will take a few minutes)"
@@ -566,11 +567,11 @@ msgstr "Vereisten opnieuw controleren"
 
 #: install/template.html
 msgid "CiviCRM Database Details"
-msgstr "CiviCRM databasedetails"
+msgstr "Database-details CiviCRM"
 
 #: install/template.html
 msgid "Drupal Database Details"
-msgstr "Drupal databasedetails"
+msgstr "Database-details Drupal"
 
 #: install/template.html
 msgid "Requirements"
