po: update po/nl_NL/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/event.po
+++ b/po/nl_NL/event.po
@@ -9,7 +9,7 @@
 # HanV <han.velthuis@home.nl>, 2011
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012-2013
 # Johan Beckers <johan@carecompany.be>, 2013
-# Kevin Levie <kevin@levity.nl>, 2015
+# Kevin Levie <kevin@levity.nl>, 2015-2016
 # maarten.pauchet <maarten.pauchet@telenet.be>, 2013
 # mollux <mattias.michaux@gmail.com>, 2014-2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-22 14:32+0000\n"
+"PO-Revision-Date: 2016-01-26 16:56+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -72,7 +72,7 @@ msgstr "Evenementstype - %1"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is a Test"
-msgstr "Dit is een test deelnemer"
+msgstr "Dit is een testdeelnemer"
 
 #: CRM/Event/BAO/Query.php CRM/Event/DAO/Participant.php
 msgid "Fee level"
@@ -84,11 +84,11 @@ msgstr "Deelnemer betaalt later"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is not Pay Later"
-msgstr "Deelnemer betaald direct"
+msgstr "Deelnemer betaalt direct"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant Status %1"
-msgstr "Deelnemerstatus %1"
+msgstr "Deelnemersstatus %1"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant Role %1"
@@ -100,7 +100,7 @@ msgstr "Herkomst deelnemer"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is a Test?"
-msgstr "Is dit een test deelnemer?"
+msgstr "Is dit een testdeelnemer?"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is Pay Later?"
@@ -1103,7 +1103,7 @@ msgstr "Bevestig uw inschrijving voor %1."
 msgid ""
 "Click the \"Confirm Registration\" button to begin, or click \"Cancel "
 "Registration\" if you are no longer interested in attending this event."
-msgstr "Klik op de knop \"Inschrijving bevestigen\" om te beginnen, of klik op \"Inschrijving annuleren\" als u geen interesse meer heeft in het bijwonen van dit evenement."
+msgstr "Klik op \"Inschrijving bevestigen\" om uw inschrijving compleet te maken, of klik op \"Inschrijving annuleren\" als u geen interesse meer heeft in het bijwonen van dit evenement."
 
 #: CRM/Event/Form/Registration/ParticipantConfirm.php
 #: templates/CRM/Event/Page/UserDashboard.tpl
@@ -1112,7 +1112,7 @@ msgstr "Inschrijving bevestigen"
 
 #: CRM/Event/Form/Registration/ParticipantConfirm.php
 msgid "Are you sure you want to cancel your registration for this event?"
-msgstr "Weet u zeker dat u de inschrijving voor dit evenement wilt annuleren?"
+msgstr "Weet u zeker dat u uw inschrijving voor dit evenement wilt annuleren?"
 
 #: CRM/Event/Form/Registration/ParticipantConfirm.php CRM/Event/Task.php
 msgid "Cancel Registration"
@@ -1138,7 +1138,7 @@ msgstr "Uw evenementinschrijving is geannuleerd."
 
 #: CRM/Event/Form/Registration/ParticipantConfirm.php
 msgid "Email has been sent to : %1"
-msgstr "Er is een e-mail verzonden naar: %1"
+msgstr "Er is een e-mail verzonden naar %1."
 
 #: CRM/Event/Form/Registration/Register.php
 msgid "How many people are you registering?"
@@ -1276,11 +1276,11 @@ msgstr "Online aanmelden voor dit evenement is momenteel niet mogelijk (neem voo
 
 #: CRM/Event/Form/Registration.php
 msgid "Registration for this event begins on %1"
-msgstr "De inschrijving voor dit evenement begint op %1"
+msgstr "De inschrijving voor dit evenement is geopend vanaf %1"
 
 #: CRM/Event/Form/Registration.php
 msgid "Registration for this event ended on %1"
-msgstr "De inschrijving voor dit evenement eindigt op %1"
+msgstr "De inschrijving voor dit evenement is gesloten op %1"
 
 #: CRM/Event/Form/Search.php
 msgid "Participant Name or Email"
@@ -1300,11 +1300,11 @@ msgstr "Deelnemers zoeken"
 
 #: CRM/Event/Form/SearchEvent.php
 msgid "Show Current and Upcoming Events"
-msgstr "Actuele en aanstaande evenementen tonen"
+msgstr "Toon actuele en aanstaande evenementen"
 
 #: CRM/Event/Form/SearchEvent.php
 msgid "Search All or by Date Range"
-msgstr "Alles zoeken of op periode"
+msgstr "Toon alles, of zoek op periode"
 
 #: CRM/Event/Form/SearchEvent.php
 msgid "Events by Dates"
@@ -1312,7 +1312,7 @@ msgstr "Evenementen op datum"
 
 #: CRM/Event/Form/Task/Badge.php
 msgid "Make Name Badges"
-msgstr "Badges maken"
+msgstr "Naambadges maken"
 
 #: CRM/Event/Form/Task/Batch.php
 msgid "Batch Update for Events"
@@ -1503,7 +1503,7 @@ msgstr "Deelnemerstatus wijzigen"
 
 #: CRM/Event/Task.php
 msgid "Print Event Name Badges"
-msgstr "Evenementbadges afdrukken"
+msgstr "Naambadges afdrukken"
 
 #: templates/CRM/Event/Cart/Form/Checkout/ConferenceEvents.tpl
 msgid "Choose Events For %1 (%2)"
@@ -1519,7 +1519,7 @@ msgstr "meer informatie"
 
 #: templates/CRM/Event/Cart/Form/Checkout/ConferenceEvents.tpl
 msgid "No description available for this event"
-msgstr "Geen beschrijving beschikbaar voor dit evenement"
+msgstr "Er is geen beschrijving beschikbaar voor dit evenement."
 
 #: templates/CRM/Event/Cart/Form/Checkout/ParticipantsAndPrices.tpl
 #: templates/CRM/Event/Form/Registration/Register.tpl
@@ -2113,7 +2113,7 @@ msgstr "Hoeveelheid tijd <strong>in uren</strong> die deelnemers met één van d
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid "remove profile"
-msgstr "profiel verwijderen"
+msgstr "verwijder profiel"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid "add profile"
@@ -2219,13 +2219,13 @@ msgstr "Extra tekst of instructies die in de e-mail ter bevestiging opgenomen mo
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid "FROM name for email."
-msgstr "Afzender voor e-mail."
+msgstr "Naam afzender"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid ""
 "FROM email address (this must be a valid email account with your SMTP email "
 "service provider)."
-msgstr "E-mailadres afzender (dit moet een geldig e-mailadres zijn bij uw SMTP e-mail dienstverlener)."
+msgstr "E-mailadres afzender (dit moet een geldig e-mailadres zijn!)"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid ""
@@ -2430,7 +2430,7 @@ msgstr "bekijk aanvullende deelnemer"
 #: templates/CRM/Event/Form/Participant.tpl
 #: templates/CRM/Event/Form/ParticipantView.tpl
 msgid "Registered By"
-msgstr "Geregistreerd Door"
+msgstr "Aangemeld door"
 
 #: templates/CRM/Event/Form/Participant.tpl
 #: templates/CRM/Event/Form/ParticipantView.tpl
@@ -2471,7 +2471,7 @@ msgstr "Evenementbadge afdrukken"
 
 #: templates/CRM/Event/Form/ParticipantView.tpl
 msgid "Print Name Badge"
-msgstr "Badge afdrukken"
+msgstr "Naambadge afdrukken"
 
 #: templates/CRM/Event/Form/ParticipantView.tpl
 msgid "Configure this event"
@@ -2479,7 +2479,7 @@ msgstr "Evenement configureren"
 
 #: templates/CRM/Event/Form/ParticipantView.tpl
 msgid "Registration Date and Time"
-msgstr "Inschrijvingsdatum en -tijd"
+msgstr "Inschrijfdatum en -tijd"
 
 #: templates/CRM/Event/Form/Registration/AdditionalParticipant.tpl
 msgid "Total Participants : %1"
@@ -2612,7 +2612,7 @@ msgstr "Als er plaatsen vrijkomen, ontvangt u een e-mail met een link naar een w
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid "Your registration has been submitted."
-msgstr "Uw inschrijving is ingediend."
+msgstr "Uw inschrijving is verzonden."
 
 #: templates/CRM/Event/Form/Registration/ThankYou.tpl
 msgid ""
@@ -3048,7 +3048,7 @@ msgstr "Recente inschrijvingen"
 
 #: templates/CRM/Event/Page/EventInfo.tpl
 msgid "Registration is closed for this event"
-msgstr "De inschrijving voor dit evenement is gesloten"
+msgstr "De inschrijving voor dit evenement is gesloten."
 
 #: templates/CRM/Event/Page/EventInfo.tpl
 msgid "Configure this event."
@@ -3293,7 +3293,7 @@ msgstr "Zodra uw aanmelding is nagekeken ontvangt u\neen e-mail met een link naa
 #: xml/templates/message_templates/participant_expired_html.tpl
 #: xml/templates/message_templates/participant_expired_text.tpl
 msgid "Event Information and Location"
-msgstr "Evenement informatie en locatie"
+msgstr "Evenement-informatie en locatie"
 
 #: xml/templates/message_templates/event_offline_receipt_html.tpl
 #: xml/templates/message_templates/event_offline_receipt_text.tpl
@@ -3317,7 +3317,7 @@ msgstr "Evenement contacten:"
 #: xml/templates/message_templates/participant_expired_html.tpl
 #: xml/templates/message_templates/participant_expired_text.tpl
 msgid "Download iCalendar File"
-msgstr "Download iCalendar bestand"
+msgstr "Download iCalendar-bestand"
 
 #: xml/templates/message_templates/event_offline_receipt_html.tpl
 #: xml/templates/message_templates/event_offline_receipt_text.tpl
@@ -3343,7 +3343,7 @@ msgstr "Uw schema:"
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid "You were registered by:"
-msgstr "U bent geregistreerd door:"
+msgstr "U bent aangemeld door:"
 
 #: xml/templates/message_templates/event_online_receipt_subject.tpl
 msgid "Wait List Confirmation"
@@ -3404,7 +3404,7 @@ msgstr "Is het bevestigingsscherm van het boeken ingeschakeld?"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Participant Role(s)"
-msgstr "Rol(len) deelnemers"
+msgstr "Deelnemersrol(len)"
 
 #: CRM/Event/DAO/ParticipantStatusType.php
 msgid "Participant Status Type ID"
@@ -3817,7 +3817,7 @@ msgstr "Aanmaken evenementen, tonen alle evenementen, en tonen gegevens deelneme
 
 #: CRM/Event/Info.php
 msgid "edit event participants"
-msgstr "wijzig deelnemers evenenment"
+msgstr "deelnemers evenement wijzigen"
 
 #: CRM/Event/Info.php
 msgid "Record and update backend event registrations"
@@ -3825,7 +3825,7 @@ msgstr "Vastleggen en wijzigen backend registraties evenement"
 
 #: CRM/Event/Info.php
 msgid "edit all events"
-msgstr "wijzigen alle evenementen"
+msgstr "alle evenementen wijzigen"
 
 #: CRM/Event/Info.php
 msgid "Edit events even without specific ACL granted"
@@ -3841,7 +3841,7 @@ msgstr "Online aanmelden voor evenementen"
 
 #: CRM/Event/Info.php
 msgid "view event info"
-msgstr "bekijken evenementsinformatie"
+msgstr "evenementsinformatie bekijken"
 
 #: CRM/Event/Info.php
 msgid "View online event information pages"
@@ -3849,7 +3849,7 @@ msgstr "Online bekijken van evenementsinformatie"
 
 #: CRM/Event/Info.php
 msgid "view event participants"
-msgstr "bekijk deelnemers"
+msgstr "deelnemers bekijken"
 
 #: CRM/Event/Info.php
 msgid "delete in CiviEvent"
@@ -3861,7 +3861,7 @@ msgstr "Verwijderen deelnemer en  evenement die u kunt wijzigen"
 
 #: CRM/Event/Info.php
 msgid "manage event profiles"
-msgstr "beheer evenementprofielen"
+msgstr "evenementprofielen beheren"
 
 #: CRM/Event/Info.php
 msgid ""
@@ -3921,11 +3921,11 @@ msgstr "Dit financieel type wordt toegekend aan de betalingen die deelnemers doe
 
 #: templates/CRM/Event/Form/ManageEvent/Repeat.tpl
 msgid "Connected Repeating Events"
-msgstr "Gekoppelde Terugkerende Evenementen"
+msgstr "Gekoppelde terugkerende evenementen"
 
 #: templates/CRM/Event/Form/ManageEvent/Repeat.tpl
 msgid "Event Link"
-msgstr "Evenement link"
+msgstr "Link naar evenement"
 
 #: templates/CRM/Event/Form/Registration/ThankYou.tpl
 msgid "Tax Total"
@@ -3939,7 +3939,7 @@ msgstr "NB: De geselecteerde contacten zijn hier niet van belang; alle contacten
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Repeating Event"
-msgstr "Terugkerend Evenement"
+msgstr "Terugkerend evenement"
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Child"
