po: update po/nl_NL/provinces.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/provinces.po
+++ b/po/nl_NL/provinces.po
@@ -9,13 +9,14 @@
 # HanV <han.velthuis@home.nl>, 2012
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012
 # Johan Beckers <johan@carecompany.be>, 2013
+# Kevin Levie <kevin@levity.nl>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-11 17:20+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-01-27 03:19+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -65,7 +66,7 @@ msgstr "Georgia"
 
 msgctxt "province"
 msgid "Hawaii"
-msgstr "Hawaï"
+msgstr "Hawaii"
 
 msgctxt "province"
 msgid "Idaho"
@@ -253,15 +254,15 @@ msgstr "Kleine afgelegen eilanden van de Verenigde Staten"
 
 msgctxt "province"
 msgid "Armed Forces Europe"
-msgstr "Gewapende troepen van Europa"
+msgstr "Armed Forces Europe (Leger VS)"
 
 msgctxt "province"
 msgid "Armed Forces Americas"
-msgstr "Gewapende troepen van Amerika"
+msgstr "Armed Forces Americas (Leger VS)"
 
 msgctxt "province"
 msgid "Armed Forces Pacific"
-msgstr "Gewapende troepen uit de Stille Oceaan"
+msgstr "Armed Forces Pacific (Leger VS)"
 
 msgctxt "province"
 msgid "Alberta"
@@ -853,7 +854,7 @@ msgstr "Sirak"
 
 msgctxt "province"
 msgid "Syunik'"
-msgstr "Syunik''"
+msgstr "Syunik'"
 
 msgctxt "province"
 msgid "Tavus"
@@ -885,11 +886,11 @@ msgstr "Cuando-Cubango"
 
 msgctxt "province"
 msgid "Cuanza Norte"
-msgstr "Noord-Cuanza"
+msgstr "Cuanza Norte"
 
 msgctxt "province"
 msgid "Cuanza Sul"
-msgstr "Noord-Cuanza"
+msgstr "Cuanza Sul"
 
 msgctxt "province"
 msgid "Cunene"
