--- a/po/nl_NL/queue.po
+++ b/po/nl_NL/queue.po
@@ -5,14 +5,15 @@
 # Translators:
 # brouwser <brouwer@ee-atwork.nl>, 2012
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012
+# Kevin Levie <kevin@levity.nl>, 2016
 # Maurice Snellen <maurice@snellen.xs4all.nl>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-06-09 15:41+0000\n"
-"Last-Translator: Maurice Snellen <maurice@snellen.xs4all.nl>\n"
-"Language-Team: Dutch (http://www.transifex.com/projects/p/civicrm/language/nl/)\n"
+"POT-Creation-Date: 2015-12-09 21:23-0500\n"
+"PO-Revision-Date: 2016-01-26 12:53+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -37,4 +38,4 @@ msgstr "Gegevens wachtrij-item"
 
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
-msgstr "Wachtrijverwerker"
+msgstr "Wachtrij-verwerker"
