--- a/po/nl_NL/report.po
+++ b/po/nl_NL/report.po
@@ -7,6 +7,7 @@
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2011-2012
 # Jan Verlaan <jan@verlaan.org>, 2012
+# Kevin Levie <kevin@levity.nl>, 2016
 # majovdh <majo.vanderhispallie@gmail.com>, 2012
 # majovdh <majo.vanderhispallie@gmail.com>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -14,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-11 17:21+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-01-27 03:13+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -259,7 +260,7 @@ msgstr "Type van de laatst voltooide activiteit"
 
 #: CRM/Report/Form/Case/Detail.php
 msgid "My Cases"
-msgstr "Mijn Dossiers"
+msgstr "Mijn dossiers"
 
 #: CRM/Report/Form/Case/Detail.php
 msgid "List of all dates of activities of Type"
