--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -47,8 +47,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-24 21:54+0000\n"
-"Last-Translator: Martin Peth <peth@systopia.de>\n"
+"PO-Revision-Date: 2016-01-27 11:09+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26713,7 +26713,7 @@ msgstr "Steuersatz"
 
 #: templates/CRM/Price/Page/LineItem.tpl
 msgid "Total Tax Amount"
-msgstr "Gesamter Steuerbetrag"
+msgstr "Steueranteil"
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
