--- a/po/de_DE/pledge.po
+++ b/po/de_DE/pledge.po
@@ -6,7 +6,7 @@
 # translatosaurus <accounts@drexler.eu>, 2012
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011,2014
-# Fabian <schuttenberg@systopia.de>, 2014
+# Fabian <schuttenberg@systopia.de>, 2014,2016
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
 # Jens-Erik Weber <JensErikWeber@gmail.com>, 2014
 # Jo <jo@caj-augsburg.de>, 2012
@@ -20,8 +20,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-27 11:36+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -307,7 +307,7 @@ msgstr "Unterstützungszusagen zeigen ab "
 
 #: CRM/Pledge/Form/Search.php
 msgid "Pledger Name or Email"
-msgstr "Name oder Email des Unterstützers"
+msgstr "Name oder Email"
 
 #: CRM/Pledge/Form/Search.php
 msgid "Find Pledges"
