--- a/po/es_ES/common-base.po
+++ b/po/es_ES/common-base.po
@@ -32,6 +32,7 @@
 # Omar Bautista González <omarbautistag@gmail.com>, 2012
 # Fernando <badeaselche@hotmail.com>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# piuser8 YT <piuser9@gmail.com>, 2016
 # Ricardo Alcántara <rialve2208@gmail.com>, 2012
 # Ricardo Alcántara <rialve2208@gmail.com>, 2012
 # Veruska Perinotto <reaching.out@gmail.com>, 2015
@@ -39,8 +40,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-28 18:43+0000\n"
+"Last-Translator: piuser8 YT <piuser9@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3348,7 +3349,7 @@ msgstr "Información de contacto"
 
 #: CRM/Contact/Form/Relationship.php
 msgid "You do not have permission to edit relationships for this contact."
-msgstr ""
+msgstr "No tienes permiso para editar relaciones de ese contacto."
 
 #: CRM/Contact/Form/Relationship.php
 msgid "Relationships for"
@@ -5842,7 +5843,7 @@ msgstr "%1 debe ser un sitio web válido."
 
 #: CRM/Core/BAO/CustomGroup.php
 msgid "Cannot create custom table because %1 is already a core table."
-msgstr ""
+msgstr "No se ha podido crear una tabla personalizada ya que %1 todavía es una tabla de núcleo."
 
 #: CRM/Core/BAO/CustomGroup.php
 msgid "%1 Questions"
@@ -7853,7 +7854,7 @@ msgstr "La clave no se ha establecido para este procesador de pago"
 
 #: CRM/Core/Payment/AuthorizeNetIPN.php
 msgid "Subscription payment failed - %1"
-msgstr ""
+msgstr "El pago de suscripción ha fallado - %1"
 
 #: CRM/Core/Payment/AuthorizeNetIPN.php
 msgid ""
@@ -25872,11 +25873,11 @@ msgstr "Subtipo de contacto %1"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Group(s) %1 %2"
-msgstr ""
+msgstr "Grupo(s) %1 %2"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Group Status %1"
-msgstr ""
+msgstr "Estado de grupo %1"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Greeting %1 %2"
