po: update po/es_ES/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/menu.po
+++ b/po/es_ES/menu.po
@@ -20,13 +20,14 @@
 # Marti <m.prat@ixiam.com>, 2014
 # Fernando <badeaselche@hotmail.com>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# piuser8 YT <piuser9@gmail.com>, 2016
 # Samuel Orrit <samuel.orrit@aiesec.net>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-07 07:24+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-28 18:43+0000\n"
+"Last-Translator: piuser8 YT <piuser9@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2115,7 +2116,7 @@ msgstr "Documentos del desarrollador"
 
 msgctxt "menu"
 msgid "File on Case"
-msgstr ""
+msgstr "Archivo de caso"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2168,37 +2169,37 @@ msgstr "Gestionar tests A/B"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Support"
-msgstr ""
+msgstr "Ayuda"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get started"
-msgstr ""
+msgstr "Empezar"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Ask a question"
-msgstr ""
+msgstr "Preguntar"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get expert help"
-msgstr ""
+msgstr "Conseguir ayuda de expertos"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "About CiviCRM"
-msgstr ""
+msgstr "Acerca de CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Register your site"
-msgstr ""
+msgstr "Registrar tu sitio"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Join CiviCRM"
-msgstr ""
+msgstr "Unirte a CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
