--- a/po/fr_CA/common-components.po
+++ b/po/fr_CA/common-components.po
@@ -6,7 +6,7 @@
 # AlexHobbit <sysadmin@cdeacf.ca>, 2015
 # lavamind <jerome@riseup.net>, 2011
 # lavamind <jerome@riseup.net>, 2011
-# Mathieu Lutfy <mathieu@bidon.ca>, 2014-2015
+# Mathieu Lutfy <mathieu@bidon.ca>, 2014-2016
 # Pierre Mathieu <pierrem7@gmail.com>, 2013-2014
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-11 12:49+0000\n"
+"PO-Revision-Date: 2016-01-28 21:58+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -1573,7 +1573,7 @@ msgstr "Déductible?"
 #: templates/CRM/Contribute/Page/ContributionType.tpl
 #: templates/CRM/Financial/Page/FinancialType.tpl
 msgid "Add Financial Type"
-msgstr "ajouter type Financier"
+msgstr "Ajouter un type financier"
 
 #: templates/CRM/Contribute/Page/ContributionType.tpl
 #: templates/CRM/Financial/Page/FinancialType.tpl
@@ -1831,7 +1831,7 @@ msgstr "Ne peut pas trouver de mécanisme de paiement pour cette page"
 #: CRM/Report/Form/Event/ParticipantListCount.php
 #: CRM/Report/Form/Event/ParticipantListing.php CRM/Report/Form/Extended.php
 msgid "Registration Date"
-msgstr "Date d'enregistrement"
+msgstr "Date d'inscription"
 
 #: CRM/Event/Form/Participant.php CRM/Member/Form/Membership.php
 #: CRM/Member/Form/MembershipRenewal.php
