po: update po/fr_CA/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/event.po
+++ b/po/fr_CA/event.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-28 00:21+0000\n"
+"PO-Revision-Date: 2016-01-28 22:11+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -410,7 +410,7 @@ msgstr "Paiement enregistré ?"
 #: CRM/Event/Form/EventFees.php CRM/Event/Form/ManageEvent/Fee.php
 #: CRM/Event/Form/Registration/Register.php
 msgid "Event Fee(s)"
-msgstr "Frais d'inscription à l'événement"
+msgstr "Frais d'inscription"
 
 #: CRM/Event/Form/EventFees.php
 msgid "Send Confirmation?"
