--- a/po/pl_PL/menu.po
+++ b/po/pl_PL/menu.po
@@ -12,6 +12,7 @@
 # njakub <fiilozof@gmail.com>, 2014
 # grsadzin <grsadzin@gmail.com>, 2012
 # grsadzin <grsadzin@gmail.com>, 2012
+# Jarek Sawiuk <jsawiuk@gmail.com>, 2016
 # kalor <karol.krzyczkowski@gmail.com>, 2014-2015
 # Marcin Cytawa <marcin.cytawa@gmail.com>, 2012
 # Michał Mach <michau@gmail.com>, 2013-2014
@@ -24,8 +25,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-28 13:40+0000\n"
+"Last-Translator: Jarek Sawiuk <jsawiuk@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2114,7 +2115,7 @@ msgstr "Dokumentacja programisty"
 
 msgctxt "menu"
 msgid "File on Case"
-msgstr ""
+msgstr "Przypisz do przypadku"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2167,37 +2168,37 @@ msgstr "Zarządzaj testem A/B"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Support"
-msgstr ""
+msgstr "Wsparcie"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get started"
-msgstr ""
+msgstr "Rozpocznij"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Ask a question"
-msgstr ""
+msgstr "Zadaj pytanie"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get expert help"
-msgstr ""
+msgstr "Zapytaj eksperta"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "About CiviCRM"
-msgstr ""
+msgstr "O CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Register your site"
-msgstr ""
+msgstr "Zarejestruj stronę"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Join CiviCRM"
-msgstr ""
+msgstr "Dołącz do CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
