--- a/po/es_ES/countries.po
+++ b/po/es_ES/countries.po
@@ -10,12 +10,13 @@
 # kaotik <kaotiko@gmail.com>, 2011
 # kaotik <kaotiko@gmail.com>, 2011
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# piuser8 YT <piuser9@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-28 18:25+0000\n"
+"Last-Translator: piuser8 YT <piuser9@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1045,8 +1046,8 @@ msgstr "Kosovo"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
-msgstr ""
+msgstr "Santo Barthélemy"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "Santo Martín (Parte de Francia)"
