--- a/po/fr_CA/financial.po
+++ b/po/fr_CA/financial.po
@@ -3,14 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Mathieu Lutfy <mathieu@bidon.ca>, 2014-2015
+# Mathieu Lutfy <mathieu@bidon.ca>, 2014-2016
 # Pierre Mathieu <pierrem7@gmail.com>, 2013-2014
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-11 12:50+0000\n"
+"PO-Revision-Date: 2016-01-28 21:58+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -374,7 +374,7 @@ msgstr "Le type de compte financier a été sauvegardé."
 
 #: CRM/Financial/Form/FinancialTypeAccount.php
 msgid " You can add another Financial Account Type."
-msgstr "Vous pouvez ajouter unautre type de compte financier"
+msgstr "Vous pouvez ajouter un autre type de compte financier"
 
 #: CRM/Financial/Page/AJAX.php
 msgid "- Select Financial Account Relationship -"
@@ -567,7 +567,7 @@ msgstr "Éditer ou visualiser compte financier"
 
 #: templates/CRM/Financial/Form/FinancialTypeAccount.tpl
 msgid "Add New Financial Type Account"
-msgstr "Ajouter nouveau  compte de Type Financier"
+msgstr "Ajouter un nouveau compte de type financier"
 
 #: templates/CRM/Financial/Form/FinancialTypeAccount.tpl
 msgid ""
