--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-25 21:01+0000\n"
+"PO-Revision-Date: 2016-01-28 15:47+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -19176,7 +19176,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "WYSIWYG Editor"
-msgstr ""
+msgstr "WYSIWYG-redigering"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Recurring Frequency Units"
@@ -19668,15 +19668,15 @@ msgstr "Workshop"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Show Smart Groups on Demand"
-msgstr ""
+msgstr "Visa vid behov"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Always Show Smart Groups"
-msgstr ""
+msgstr "Visa alltid"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Hide Smart Groups"
-msgstr ""
+msgstr "Dölj"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Communication Preferences"
