--- a/po/pl_PL/common-base.po
+++ b/po/pl_PL/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"PO-Revision-Date: 2016-01-28 13:38+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
@@ -1096,7 +1096,7 @@ msgstr "Wybrano <strong>Działania</strong>: %1"
 
 #: CRM/Activity/Form/Task/FileOnCase.php CRM/Activity/Task.php
 msgid "File on Case"
-msgstr ""
+msgstr "Przypisz do przypadku"
 
 #: CRM/Activity/Form/Task/FileOnCase.php
 msgid "Select Case"
