--- a/po/fr_FR/case.po
+++ b/po/fr_FR/case.po
@@ -19,7 +19,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-25 21:25+0000\n"
+"PO-Revision-Date: 2016-01-30 14:32+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -444,7 +444,7 @@ msgstr "Vous n'êtes pas autorisé à accéder à tous les dossiers et activité
 
 #: CRM/Case/Page/Tab.php
 msgid "Are you sure you want to delete this case?"
-msgstr ""
+msgstr "Êtes-vous sûr de vouloir supprimer ce dossier ?"
 
 #: CRM/Case/Page/Tab.php CRM/Case/Selector/Search.php
 #: templates/CRM/Case/Form/Case.tpl
