--- a/po/fr_FR/event.po
+++ b/po/fr_FR/event.po
@@ -10,6 +10,7 @@
 # fr rev <e2ffr02@hotmail.com>, 2015
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Paul Caranton <caranton.paul@gmail.com>, 2015
+# Peter <webmaster@lebouclier.com>, 2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # reda <redasadki@gmail.com>, 2011
@@ -18,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-21 12:41+0000\n"
-"Last-Translator: Paul Caranton <caranton.paul@gmail.com>\n"
+"PO-Revision-Date: 2016-01-30 14:35+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3194,7 +3195,7 @@ msgstr "Inscription (en réel)"
 
 #: templates/CRM/Event/Page/ManageEvent.tpl
 msgid "Don't see your event listed? Try \"Search All or by Date Range\" above."
-msgstr "Vous ne voyez pas vos événements affichés ? essayez « Tous ou dans un intervalle de temps » ci-dessus."
+msgstr "Vous ne voyez pas vos événements affichés ? Essayez « Tous ou ceux dans un intervalle de temps » ci-dessus."
 
 #: templates/CRM/Event/Page/ManageEvent.tpl
 msgid "No available Events match your search criteria. Suggestions:"
