--- a/po/ar_EG/install.po
+++ b/po/ar_EG/install.po
@@ -3,14 +3,15 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Mathieu Lutfy <mathieu@bidon.ca>, 2016
 # Nour El-Assaad <nelassaad@ndi.org>, 2015
 # suzanne kazan <skazan@ndi.org>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:58-0400\n"
-"PO-Revision-Date: 2015-10-12 06:07+0000\n"
-"Last-Translator: suzanne kazan <skazan@ndi.org>\n"
+"POT-Creation-Date: 2015-12-09 21:24-0500\n"
+"PO-Revision-Date: 2016-01-31 22:03+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Arabic (http://www.transifex.com/civicrm/civicrm/language/ar/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -214,7 +215,7 @@ msgstr "ليس من ملف \"1%\". "
 
 #: install/index.php
 msgid "Is the %1 folder writeable?"
-msgstr "هل الملف 1% قابل للكتابة؟"
+msgstr "هل الملف %1 قابل للكتابة؟"
 
 #: install/index.php
 msgid "I can't tell what webserver you are running"
@@ -300,7 +301,7 @@ msgstr "تمّ إيجاد ملف \"1%\""
 msgid ""
 "The user account used by your web-server %1 needs to be granted write access"
 " to the following directory in order to configure the CiviCRM settings file:"
-msgstr "يجب  أن يمنح حساب المستخدم الذي يستعمله خادم الويب %1 حق الوصول بالكتابة إلى الدليل التالي بغية ضبط ملف إعدادات CiviCRM."
+msgstr "يجب أن يمنح حساب المستخدم الذي يستعمله خادم الويب %1 حق الوصول بالكتابة إلى الدليل التالي بغية ضبط ملف إعدادات CiviCRM."
 
 #: install/index.php
 msgid ""
@@ -450,7 +451,7 @@ msgstr "تثبيت CiviCRM "
 
 #: install/template.html
 msgid "Version %1"
-msgstr "نسخة 1%"
+msgstr "نسخة  %1"
 
 #: install/template.html
 msgid ""
