--- a/po/he_IL/countries.po
+++ b/po/he_IL/countries.po
@@ -6,13 +6,14 @@
 # nilisteiner <nilisteiner@gmail.com>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Ronny Sherer <ronny.sherer@gmail.com>, 2013
+# xnhy <mrottman3@gmail.com>, 2016
 # Yaron Shahrabani <sh.yaron@gmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-01 14:29+0000\n"
+"Last-Translator: xnhy <mrottman3@gmail.com>\n"
 "Language-Team: Hebrew (http://www.transifex.com/civicrm/civicrm/language/he/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1042,8 +1043,8 @@ msgstr "קוסובו"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
-msgstr ""
+msgstr "סנט בטרלמי"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "סנט מרטין (חלק צרפתי)"
