po: update po/he_IL/extension.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/he_IL/extension.po
+++ b/po/he_IL/extension.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # noamoss <noamoss@gmail.com>, 2015
+# xnhy <mrottman3@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-01 14:33+0000\n"
+"Last-Translator: xnhy <mrottman3@gmail.com>\n"
 "Language-Team: Hebrew (http://www.transifex.com/civicrm/civicrm/language/he/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -99,7 +100,7 @@ msgstr "כתובות ה-URL להרחבות לא הוגדרה כראוי. אנא 
 msgid ""
 "Your extensions directory is not set or is not writable. Click <a "
 "href='%1'>here</a> to set the extensions directory."
-msgstr ""
+msgstr "תקיית ההתקנה של התוספים אינה מוגדרת או שאינה ניתנת לכתיבה, לחץ  <a href='%1'>כאן</a> על מנת להגדירה."
 
 #: CRM/Extension/Downloader.php
 msgid "ZIP Support Required"
