po: update po/sv_SE/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-28 15:45+0000\n"
+"PO-Revision-Date: 2016-02-01 13:00+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -684,7 +684,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Viewing Contacts"
-msgstr "Visar kontakt"
+msgstr "Visa flikar"
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Viewing Smart Groups"
@@ -2941,7 +2941,7 @@ msgid ""
 "          EXAMPLE: If your organization does not record Gender and Birth Date for individuals, then simplify the form\n"
 "          by un-checking this option. Drag interface allows you to change the order of the panes displayed on contact\n"
 "          add/edit screen."
-msgstr ""
+msgstr "Välj de avsnitt som skall vara tillgängliga när man skapar eller redigerar en kontaktpost. EXEMPEL: Om din organisation inte registrerar kön och födelsedagar för personer, så kan du förenkla formulären genom att avmarkera dessa avsnitt. Du kan ändra ordning på avdelningarna genom att dra och släppa."
 
 #: templates/CRM/Admin/Form/Preferences/Display.tpl
 msgid ""
@@ -2972,7 +2972,7 @@ msgstr ""
 msgid ""
 "Select the sections that should be included in the Contact Dashboard. EXAMPLE: If you don't want\n"
 "          constituents to view their own contribution history, un-check that option."
-msgstr ""
+msgstr "Välj de avdelningar som skall finnas på Kontrollpanelen för kontakter. EXEMPEL: om du vill att besökare\ninte ska se sin egen betalningshistorik, kryssa ur det fältet."
 
 #: templates/CRM/Admin/Form/Preferences/Display.tpl
 msgid ""
@@ -2985,7 +2985,7 @@ msgid ""
 "Select the HTML WYSIWYG Editor provided for fields that allow HTML formatting. Select 'Textarea'\n"
 "          if you don't want to provide a WYSIWYG Editor (users will type text and / or HTML code into plain text\n"
 "          fields)."
-msgstr ""
+msgstr "Ange vilken redigerare du vill använda för fält som tillåter HTML-formattering. Välj 'Textfält' om du inte\nvill tillhandahålla någon WYSIWYG-redigerare (användare måste då skriva text och HTML-kod direkt\ni textfälten)."
 
 #: templates/CRM/Admin/Form/Preferences/Display.tpl
 msgid "Display name format for individual contact display names."
@@ -6515,7 +6515,7 @@ msgid ""
 " for individuals, then simplify the form by un-checking this option. Drag "
 "interface allows you to change the order of the panes displayed on contact "
 "add/edit screen."
-msgstr ""
+msgstr "Välj de avsnitt som skall vara tillgängliga när man skapar eller redigerar en kontaktpost. EXEMPEL: Om din organisation inte registrerar kön och födelsedagar för personer, så kan du förenkla formulären genom att avmarkera dessa avsnitt. Du kan ändra ordning genom att dra och släppa de olika fälten."
 
 #: templates/CRM/Admin/Form/Preferences/Display.tpl
 msgid ""
