--- a/po/sv_SE/menu.po
+++ b/po/sv_SE/menu.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-14 15:01+0000\n"
+"PO-Revision-Date: 2016-02-01 09:59+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -952,7 +952,7 @@ msgstr "Anmälningssida"
 
 msgctxt "menu"
 msgid "Browse Uploaded files"
-msgstr "Visa uppladdade filer"
+msgstr "Bläddra bland uppladdade filer"
 
 msgctxt "menu"
 msgid "Delete file"
