--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-28 15:47+0000\n"
+"PO-Revision-Date: 2016-02-01 09:54+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -19176,7 +19176,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "WYSIWYG Editor"
-msgstr "WYSIWYG-redigering"
+msgstr "Redigerare för WYSIWYG"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Recurring Frequency Units"
