--- a/po/sv_SE/common-components.po
+++ b/po/sv_SE/common-components.po
@@ -7,13 +7,13 @@
 # Isak Bergdahl <jahve@rocketmail.com>, 2013
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2015
+# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-01 10:00+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2329,7 +2329,7 @@ msgid ""
 "complex layouts - it is best to use an HTML editor on your local computer. "
 "Then locate and upload the saved file(s) by clicking the "
 "<strong>Browse</strong> button."
-msgstr ""
+msgstr "Om du väljer att redigera direkt på skärmen finns en WYSIWYG (\"what you see is what you get\")-redigerare så att du kan skapa formatterade meddelanden utan att skriva HTML. Om du tänker skapa mera komplext formatterade meddelande kan det vara enklare att använda en HTML-editor på din lokala data. Du kan sen ladda upp den färdiga filen genom att klicka på knappen <strong>Bläddra/ladda upp</strong>."
 
 #: templates/CRM/Contribute/Page/ContributionRecur.tpl
 #: CRM/Report/Form/Contribute/Recur.php
