--- a/po/sv_SE/event.po
+++ b/po/sv_SE/event.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-25 20:56+0000\n"
+"PO-Revision-Date: 2016-02-01 12:27+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -3076,7 +3076,7 @@ msgstr "(inte tillgängligt)"
 
 #: templates/CRM/Event/Page/ManageEvent.hlp
 msgid "ICalendar Downloads and Feeds"
-msgstr ""
+msgstr "Nedladdning av iCalendar och flöden"
 
 #: templates/CRM/Event/Page/ManageEvent.hlp
 msgid ""
