po: update po/ca_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-13 01:18+0000\n"
+"PO-Revision-Date: 2016-02-02 21:21+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -3564,7 +3564,7 @@ msgstr "Totes les etiquetes"
 
 #: CRM/Contact/Form/Search/Criteria.php CRM/Core/SelectValues.php
 msgid "Search Views"
-msgstr "Cerca visualitzacions"
+msgstr "Visualitzacions de cerca"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "- default view -"
@@ -19299,7 +19299,7 @@ msgstr "Opcions de renovació automàtica"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Financial Account Type"
-msgstr "Tipus de compte financera "
+msgstr "Tipus de compte financer "
 
 #: xml/templates/civicrm_data.tpl
 msgid "Financial Item Status"
@@ -26439,7 +26439,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Search/Criteria/Basic.tpl
 msgid "Search Settings"
-msgstr ""
+msgstr "Configuració de cerca"
 
 #: templates/CRM/Contact/Form/Task/AddToHousehold.tpl
 #: templates/CRM/Contact/Form/Task/AddToOrganization.tpl
