--- a/po/ca_ES/admin.po
+++ b/po/ca_ES/admin.po
@@ -5,7 +5,7 @@
 # Translators:
 # Calbasi <joan@calbasi.net>, 2013
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
-# francescbassas <francesc@babu.cat>, 2013-2015
+# francescbassas <francesc@babu.cat>, 2013-2016
 # francescbassas <francesc@babu.cat>, 2013
 # Marti <m.prat@ixiam.com>, 2014
 # oriolferran <oriol@creat.cat>, 2015
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-02 18:53+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -474,7 +474,7 @@ msgstr "Introdueix una URL vàlida"
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "Payment Processor Type"
-msgstr ""
+msgstr "Tipus de processador de pagament"
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "Is this Payment Processor active?"
@@ -482,7 +482,7 @@ msgstr "Està actiu aquest sistema de pagament?"
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "Is this Payment Processor the default?"
-msgstr "És aquest un sistema de pagament per defecte?"
+msgstr "És aquest el sistema de pagament per defecte?"
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "You must have at least the test or live section filled"
@@ -5707,7 +5707,7 @@ msgid ""
 "installation. You must then assign an active Payment Processor to each "
 "<strong>Online Contribution Page</strong> and each paid "
 "<strong>Event</strong>."
-msgstr ""
+msgstr "Podeu configurar un o més processadors de pagament per la vostra instal·lació de CiviCRM. Heu d'assignar un processador de pagament actiu a cada <strong>Pàgina de contribució en línia</strong> i a cada <strong>Esdeveniment</strong>."
 
 #: templates/CRM/Admin/Page/PaymentProcessor.tpl
 msgid "Processor Type"
