--- a/po/fr_FR/common-base.po
+++ b/po/fr_FR/common-base.po
@@ -41,7 +41,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-25 21:18+0000\n"
+"PO-Revision-Date: 2016-02-02 18:20+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -4524,7 +4524,7 @@ msgid ""
 "Selected contact(s) do not have a valid email address, or communication "
 "preferences specify DO NOT EMAIL, or they are deceased or Primary email "
 "address is On Hold."
-msgstr "Le(s) contact(s) sélectionné(s) n'ont pas d'adresse de courriel valide ou préfèrent ne pas être joints par courriel ou ont une adresse principale invalide ou sont décédés."
+msgstr "Le(s) contact(s) sélectionné(s) n'ont pas d'adresse de courriel valide, ou préfèrent ne pas être joints par courriel, ou ont une adresse principale invalide, ou sont décédés."
 
 #: CRM/Contact/Form/Task/EmailCommon.php
 msgid "Send Email"
