--- a/po/pl_PL/install.po
+++ b/po/pl_PL/install.po
@@ -7,13 +7,14 @@
 # Dariusz Bukowski <bukowski@poczta.onet.pl>, 2014
 # Dariusz Koryto <nowydako@gmail.com>, 2015
 # kalor <karol.krzyczkowski@gmail.com>, 2015
+# Piotr Kaczyński <www@skrzydla.lublin.pl>, 2016
 # Sergey <kovalski1601@gmail.com>, 2015
 # Wiktor Jezioro <wikjezioro@op.pl>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:58-0400\n"
-"PO-Revision-Date: 2015-09-30 19:07+0000\n"
+"POT-Creation-Date: 2015-12-09 21:24-0500\n"
+"PO-Revision-Date: 2016-02-03 19:13+0000\n"
 "Last-Translator: Piotr Kaczyński <www@skrzydla.lublin.pl>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
@@ -24,7 +25,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Oops! Please correct your install location"
-msgstr ""
+msgstr "Ups ! Popraw swoje miejsce instalacji"
 
 #: install/index.php
 msgid ""
