--- a/po/fr_FR/mailing.po
+++ b/po/fr_FR/mailing.po
@@ -5,6 +5,7 @@
 # Translators:
 # SR71 <ben.alard@gmail.com>, 2012
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
+# matthias de mauroy <m.mauroy@cyim.com>, 2016
 # Peter <webmaster@lebouclier.com>, 2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Philippe SAMPONT <PhilippeS@cncd.be>, 2015
@@ -18,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-25 21:10+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"PO-Revision-Date: 2016-02-03 14:57+0000\n"
+"Last-Translator: matthias de mauroy <m.mauroy@cyim.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1727,11 +1728,11 @@ msgid ""
 " <i><b>not</b></i> been added to any mailing lists. If this is your email "
 "address and you <i><b>wish to opt out</b></i> please enter your email "
 "address below for verification purposes:"
-msgstr "Si ceci n'est pas votre adresse mail, vous n'avez d'autre à faire. Vous <i><b>n'avez pas</b></i> été ajouté à un mailing list. Si ceci est votre adresse mail et que vous <i><b>souhaitez vous désinscrire</b></i>, merci de saisir votre adresse mail ci-dessous à des fins de vérification :"
+msgstr "Si ce n’est pas votre adresse, aucune action n’est requise de votre part. Vous <i><b>n’avez pas été</b></i> ajouté à une liste de diffusion.\nSi c’est votre adresse mail et que vous <i><b>souhaitez vous désinscrire</b></i>, merci de la saisir ci-dessous pour que nous puissions la vérifier :"
 
 #: templates/CRM/Mailing/Form/Unsubscribe.tpl
 msgid "You are requesting to unsubscribe this email address:"
-msgstr ""
+msgstr "Vous venez de demander à désinscrire l’adresse mail suivante :"
 
 #: templates/CRM/Mailing/Form/Unsubscribe.tpl
 msgid ""
@@ -1739,7 +1740,7 @@ msgid ""
 " <i><b>not</b></i> been added to any mailing lists. If this is your email "
 "address and you <i><b>wish to unsubscribe</b></i> please enter your email "
 "address below for verification purposes:"
-msgstr ""
+msgstr "Si ce n’est pas votre adresse, aucune action n’est requise de votre part. Vous <i><b>n’avez pas été</b></i> ajouté à une liste de diffusion.\nSi c’est votre adresse mail et que vous <i><b>souhaitez vous désinscrire</b></i>, merci de la saisir ci-dessous pour que nous puissions la vérifier :"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Field \"%1\" is required."
