--- a/po/pl_PL/countries.po
+++ b/po/pl_PL/countries.po
@@ -5,13 +5,14 @@
 # Translators:
 # Marcin Cytawa <marcin.cytawa@gmail.com>, 2012
 # Michał Mach <michau@gmail.com>, 2013
+# Piotr Kaczyński <www@skrzydla.lublin.pl>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-02-03 23:15+0000\n"
+"Last-Translator: Piotr Kaczyński <www@skrzydla.lublin.pl>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1041,8 +1042,8 @@ msgstr "Kosowo"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
-msgstr ""
+msgstr "Saint-Barthélemy"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "Saint-Martin (część francuska)"
