--- a/po/pl_PL/menu.po
+++ b/po/pl_PL/menu.po
@@ -25,8 +25,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-28 13:40+0000\n"
-"Last-Translator: Jarek Sawiuk <jsawiuk@gmail.com>\n"
+"PO-Revision-Date: 2016-02-03 19:15+0000\n"
+"Last-Translator: Piotr Kaczyński <www@skrzydla.lublin.pl>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
