po: update po/sv_SE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-01 09:54+0000\n"
+"PO-Revision-Date: 2016-02-03 23:06+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -2446,7 +2446,7 @@ msgstr ""
 
 #: CRM/Contact/DAO/Group.php
 msgid "Group is Hidden"
-msgstr ""
+msgstr "Gruppen är dold"
 
 #: CRM/Contact/DAO/Group.php
 msgid "Group is Reserved"
@@ -6989,7 +6989,7 @@ msgstr "Är IM primär?"
 
 #: CRM/Core/DAO/Job.php
 msgid "Run Frequency"
-msgstr ""
+msgstr "Körningsintervall"
 
 #: CRM/Core/DAO/Job.php
 msgid "Last Run"
@@ -7009,7 +7009,7 @@ msgstr "Parametrar"
 
 #: CRM/Core/DAO/Job.php
 msgid "Hourly"
-msgstr "varje timme"
+msgstr "Varje timme"
 
 #: CRM/Core/DAO/Job.php
 msgid "Daily"
@@ -11473,19 +11473,19 @@ msgstr "Pajdiagram"
 
 #: CRM/Utils/OpenFlashChart.php
 msgid "Monthly"
-msgstr ""
+msgstr "En gång per månad"
 
 #: CRM/Utils/OpenFlashChart.php
 msgid "Quarterly"
-msgstr ""
+msgstr "En gång per kvartal"
 
 #: CRM/Utils/OpenFlashChart.php
 msgid "Weekly"
-msgstr ""
+msgstr "Varje vecka"
 
 #: CRM/Utils/OpenFlashChart.php
 msgid "Yearly"
-msgstr ""
+msgstr "Årligen"
 
 #: CRM/Utils/PDF/Label.php
 msgid "Courier"
