--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-01 13:00+0000\n"
+"PO-Revision-Date: 2016-02-03 23:05+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -138,7 +138,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Job.php
 msgid "Run frequency"
-msgstr ""
+msgstr "Körningsintervall"
 
 #: CRM/Admin/Form/Job.php
 msgid "Command parameters"
@@ -644,7 +644,7 @@ msgstr "Du har aktiverat användningen av län/landskap. Säkerställ att motsva
 
 #: CRM/Admin/Form/Preferences/Campaign.php
 msgid "CiviCampaign Component Settings"
-msgstr ""
+msgstr "Inställningar för CiviCampaign"
 
 #: CRM/Admin/Form/Preferences/Campaign.php
 msgid "Tag for Unconfirmed Petition Signers"
@@ -728,7 +728,7 @@ msgstr "Inmatningsformat"
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid "CiviEvent Component Settings"
-msgstr ""
+msgstr "Inställningar för CiviEvent"
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid "Use Shopping Cart Style Event Registration"
@@ -746,7 +746,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "CiviMail Component Settings"
-msgstr ""
+msgstr "Inställningar för CiviMail"
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "Enable Double Opt-in for Profile Group(s) field"
@@ -832,7 +832,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Member.php
 msgid "CiviMember Component Settings"
-msgstr ""
+msgstr "Inställningar för CiviMember"
 
 #: CRM/Admin/Form/Preferences/Member.php
 msgid "Default online membership renewal page"
@@ -2238,13 +2238,13 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Job.tpl
 msgid "API call:"
-msgstr ""
+msgstr "API-funktion:"
 
 #: templates/CRM/Admin/Form/Job.tpl
 msgid ""
 "Put in the API method name. You need to enter pieces of full API function "
 "name as described in the documentation."
-msgstr ""
+msgstr "Ange API-metoden som skall anropas. Du behöver delar av det fulla API-funktionsnamnet så som anges i dokumentationen."
 
 #: templates/CRM/Admin/Form/LabelFormats.tpl
 msgid ""
@@ -6384,7 +6384,7 @@ msgstr "Kopia %1 av %2"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "CiviContribute Component Settings"
-msgstr ""
+msgstr "Inställningar för CiviContribute"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Invoice Prefix"
