po: update po/sv_SE/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/common-components.po
+++ b/po/sv_SE/common-components.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-01 10:00+0000\n"
+"PO-Revision-Date: 2016-02-03 15:20+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -1983,7 +1983,7 @@ msgstr "URL"
 #: CRM/Mailing/Selector/Event.php templates/CRM/Mailing/Page/Report.tpl
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Intended Recipients"
-msgstr ""
+msgstr "Avsedda mottagare"
 
 #: CRM/Mailing/Selector/Search.php templates/CRM/Mailing/Form/Search.tpl
 #: templates/CRM/Mailing/Form/Task/Print.tpl
