po: update po/fr_FR/extension.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/extension.po
+++ b/po/fr_FR/extension.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Bronner Matthieu <mat.bronner@hotmail.fr>, 2013
+# Bruno Verrier <bruno.verrier@worldonline.fr>, 2016
 # Peter <webmaster@lebouclier.com>, 2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2013
 # Philippe SAMPONT <PhilippeS@cncd.be>, 2015
@@ -12,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-03 14:05+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"PO-Revision-Date: 2016-02-04 09:18+0000\n"
+"Last-Translator: Bruno Verrier <bruno.verrier@worldonline.fr>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -29,7 +30,7 @@ msgstr "Impossible d'écrire dans le répertoire"
 msgid ""
 "Your extensions cache directory (%1) is not web server writable. Please go "
 "to the <a href=\"%2\">path setting page</a> and correct it.<br/>"
-msgstr ""
+msgstr "Le serveur ne peut écrire dans le répertoire cache des extensions (%1). Vous pouvez aller sur cette <a href=\"%2\">page</a> pour changer le chemin d'accès au répertoire."
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -42,7 +43,7 @@ msgid ""
 "please check your webserver can make external HTTP requests or contact "
 "CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>.<br "
 "/>"
-msgstr ""
+msgstr "Il est impossible d'accéder au répertoire CiviCRM public des extensions %1. Vérifiez que votre serveur est autorisé à faire des requêtes HTTP extérieures ou bien contactez l'équipe CiviCRM sur le <a href=\"http://forum.civicrm.org/\">forum CiviCRM</a>.<br />"
 
 #: CRM/Extension/Browser.php
 msgid "Connection Error"
@@ -85,19 +86,19 @@ msgstr "N'a pas réussi à déterminer l'url pour l'extension (%1). Veuillez met
 
 #: CRM/Extension/Container/Basic.php
 msgid "Parse error in extension: %1"
-msgstr ""
+msgstr "Erreur d'analyse -Parse error - dans l'extension: %1."
 
 #: CRM/Extension/Container/Default.php
 msgid ""
 "The extensions directory is not properly set. Please go to the <a "
 "href=\"%1\">path setting page</a> and correct it.<br/>"
-msgstr ""
+msgstr "Le répertoire des extensions n'est pas correctement paramétré. Vous pouvez aller sur cette <a href=\"%1\">page</a> pour le corriger."
 
 #: CRM/Extension/Container/Default.php
 msgid ""
 "The extensions URL is not properly set. Please go to the <a href=\"%1\">URL "
 "setting page</a> and correct it.<br/>"
-msgstr ""
+msgstr "Le chemin d'accès aux extensions n'est pas correctement paramétré.  Vous pouvez aller sur cette <a href=\"%1\">page</a> pour le changer."
 
 #: CRM/Extension/Downloader.php
 msgid ""
@@ -114,7 +115,7 @@ msgid ""
 "You will not be able to install extensions at this time because your "
 "installation of PHP does not support ZIP archives. Please ask your system "
 "administrator to install the standard PHP-ZIP extension."
-msgstr ""
+msgstr "Vous ne pouvez pas installer d'extension actuellement parce que votre installation de PHP ne permet pas de traiter les archives ZIP. Vous devez demander à votre administrateur système d'installer l'extension standard PHP-ZIP."
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
@@ -122,7 +123,7 @@ msgstr "Impossible d'extraire l'extension: mauvaise structure du répertoire"
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: %1 cannot be cleared"
-msgstr ""
+msgstr "Impossible d'extraire l'extension : %1 ne peut être effacé"
 
 #: CRM/Extension/Downloader.php
 msgid "Installation Error"
