--- a/po/fr_FR/campaign.po
+++ b/po/fr_FR/campaign.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Baptiste Bisson <bbisson.baptiste@gmail.com>, 2016
+# Bruno Verrier <bruno.verrier@worldonline.fr>, 2016
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
@@ -15,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-13 15:39+0000\n"
-"Last-Translator: Baptiste Bisson <bbisson.baptiste@gmail.com>\n"
+"PO-Revision-Date: 2016-02-04 10:02+0000\n"
+"Last-Translator: Bruno Verrier <bruno.verrier@worldonline.fr>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -100,7 +101,7 @@ msgstr "ID du statut de campagne"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign External Identifier"
-msgstr ""
+msgstr "Identifiant externe de campgane"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Parent Campaign"
