po: update po/fr_FR/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/batch.po
+++ b/po/fr_FR/batch.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Bronner Matthieu <mat.bronner@hotmail.fr>, 2013
+# Bruno Verrier <bruno.verrier@worldonline.fr>, 2016
 # Nicolas <nicolas@cividesk.com>, 2013
 # Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
@@ -12,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-01 19:13+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"PO-Revision-Date: 2016-02-04 10:09+0000\n"
+"Last-Translator: Bruno Verrier <bruno.verrier@worldonline.fr>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -95,7 +96,7 @@ msgstr "Valider et traiter le lot"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Some fields have been excluded."
-msgstr ""
+msgstr "Certains champs ont été exclus."
 
 #: CRM/Batch/Form/Entry.php
 msgid "Soft credit amount should not be greater than the total amount"
@@ -174,7 +175,7 @@ msgstr "Aucun lot d'entrée de données n'a été créé pour ce site."
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch ID"
-msgstr ""
+msgstr "ID du traitement par lots"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Title"
@@ -202,7 +203,7 @@ msgstr "Groupe modifié le"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Smart Group"
-msgstr ""
+msgstr "Traitement par lots dynamique"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Total"
@@ -218,7 +219,7 @@ msgstr ""
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Exported Date"
-msgstr ""
+msgstr "Date d'export du traitement par lots"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Data"
@@ -230,7 +231,7 @@ msgstr ""
 
 #: CRM/Batch/Form/Entry.php
 msgid "You can not record two payments for the same pledge in a single batch."
-msgstr ""
+msgstr "Vous ne pouvez pas enregistrer deux paiements pour un engagement identique dans le même traitement par lots."
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid "Open Pledges (Due Date - Amount)"
