--- a/po/fr_FR/financial.po
+++ b/po/fr_FR/financial.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Baptiste Bisson <bbisson.baptiste@gmail.com>, 2016
+# Bruno Verrier <bruno.verrier@worldonline.fr>, 2016
 # Nicolas <nicolas@cividesk.com>, 2013
 # Peter <webmaster@lebouclier.com>, 2015
 # Peter <webmaster@lebouclier.com>, 2015-2016
@@ -13,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-25 21:11+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"PO-Revision-Date: 2016-02-04 10:01+0000\n"
+"Last-Translator: Bruno Verrier <bruno.verrier@worldonline.fr>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -66,7 +67,7 @@ msgstr "Ce ou ces contact(s) ne peuvent être supprimés définitivement car ils
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid "The following tables have an entry for this financial type: %1"
-msgstr ""
+msgstr "Les tables suivantes ont une entrée pour ce type d'opération: 1%"
 
 #: CRM/Financial/BAO/FinancialTypeAccount.php
 msgid ""
@@ -86,7 +87,7 @@ msgstr "Il n'est pas possible de supprimer un compte avec une relation %1 car il
 msgid ""
 "Unbalanced transactions may be created if you delete the account of type: "
 "%1."
-msgstr ""
+msgstr "Des transactions non équilibrées peuvent être générées si vous supprimez le compte de type %1."
 
 #: CRM/Financial/BAO/PaymentProcessor.php
 msgid "Invalid value passed to getPayment function"
@@ -104,7 +105,7 @@ msgstr "Il y a une passerelle de paiement associée avec le type de passerelle d
 
 #: CRM/Financial/BAO/PaymentProcessorType.php
 msgid "Selected Payment Processor type has been deleted.<br>"
-msgstr ""
+msgstr "La passerelle de paiement sélectionnée a été supprimée."
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Symbol"
